--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -27,19 +27,11 @@
 # THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 set(crypto_sources
-  aesb.c
-  blake256.c
   chacha.c
   crypto-ops-data.c
   crypto-ops.c
   crypto.cpp
-  groestl.c
-  hash-extra-blake.c
-  hash-extra-groestl.c
-  hash-extra-jh.c
-  hash-extra-skein.c
   hash.c
-  jh.c
   keccak.c
   tree-hash.c
   pow_hash/aux_hash.c
@@ -47,32 +39,22 @@ set(crypto_sources
   pow_hash/cn_slow_hash_hard_intel.cpp
   pow_hash/cn_slow_hash_intel_avx2.cpp
   pow_hash/cn_slow_hash_hard_arm.cpp
-  oaes_lib.c
   random.c
-  skein.c
   tree-hash.c)
 
 set(crypto_headers)
 
 set(crypto_private_headers
-  blake256.h
   chacha.h
   crypto-ops.h
   crypto.h
   generic-ops.h
-  groestl.h
-  groestl_tables.h
   hash-ops.h
   hash.h
   initializer.h
-  jh.h
   keccak.h
   pow_hash/cn_slow_hash.hpp
-  oaes_config.h
-  oaes_lib.h
-  random.h
-  skein.h
-  skein_port.h)
+  random.h)
 
 monero_private_headers(cncrypto
   ${crypto_private_headers})
