--- a/src/device/CMakeLists.txt
+++ b/src/device/CMakeLists.txt
@@ -73,4 +73,6 @@ target_link_libraries(device
     ringct_basic
     ${OPENSSL_CRYPTO_LIBRARIES}
   PRIVATE
+    version
+    ${Blocks}
     ${EXTRA_LIBRARIES})
