--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -7,7 +7,7 @@
 #define DEF_TRITON_VERSION TRITON_STRINGIFY(DEF_TRITON_VERSION_MAJOR) "." TRITON_STRINGIFY(DEF_TRITON_VERSION_MINOR) "." TRITON_STRINGIFY(DEF_TRITON_VERSION_PATCH)
 
 #define DEF_TRITON_VERSION_TAG "@VERSIONTAG@"
-#define DEF_TRITON_RELEASE_NAME "Beryllium"
+#define DEF_TRITON_RELEASE_NAME "Portland"
 #define DEF_TRITON_VERSION_FULL DEF_TRITON_VERSION "-" DEF_TRITON_VERSION_TAG
 
 #include "version.h"
