--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -1,6 +1,6 @@
-#define DEF_TRITON_VERSION_MAJOR 6
+#define DEF_TRITON_VERSION_MAJOR 7
 #define DEF_TRITON_VERSION_MINOR 0
-#define DEF_TRITON_VERSION_PATCH 3
+#define DEF_TRITON_VERSION_PATCH 0
 #define DEF_MONERO_VERSION_IS_RELEASE @VERSION_IS_RELEASE@
 
 
@@ -9,7 +9,7 @@
 #define DEF_TRITON_VERSION TRITON_STRINGIFY(DEF_TRITON_VERSION_MAJOR) "." TRITON_STRINGIFY(DEF_TRITON_VERSION_MINOR) "." TRITON_STRINGIFY(DEF_TRITON_VERSION_PATCH)
 
 #define DEF_TRITON_VERSION_TAG "@VERSIONTAG@"
-#define DEF_TRITON_RELEASE_NAME "Pythia I"
+#define DEF_TRITON_RELEASE_NAME "Pythia II"
 #define DEF_TRITON_VERSION_FULL DEF_TRITON_VERSION "-" DEF_TRITON_VERSION_TAG
 #define DEF_EQUILIBRIA_VERSION_IS_RELEASE @VERSION_IS_RELEASE@
 
