Remove comment out pythia calls and remove old delfi

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -116,8 +116,7 @@ add_subdirectory(ringct)
 add_subdirectory(checkpoints)
 add_subdirectory(cryptonote_basic)
 add_subdirectory(cryptonote_core)
-add_subdirectory(delfi)
-add_subdirectory(karai_handler)
+# add_subdirectory(karai_handler)
 add_subdirectory(lmdb)
 add_subdirectory(multisig)
 add_subdirectory(net)
