--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,12 +9,8 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
-    - name: fetch zeromq headers
-      run: git clone https://github.com/zeromq/cppzmq
-    - name: move zmq header
-      run: sudo cp cppzmq/zmq.hpp /usr/local/include  
     - name: update brew and install dependencies
-      run: brew update && brew install openssl pkg-config boost hidapi zmq libpgm miniupnpc ldns expat libunwind-headers protobuf readline
+      run: brew update && brew install boost hidapi zmq libpgm miniupnpc ldns expat libunwind-headers protobuf
     - name: build
       run: make -j3
 
@@ -24,9 +20,9 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
-    - uses: eine/setup-msys2@v0
-      with:
-        update: true
+    - uses: numworks/setup-msys2@v1
+    - name: update pacman
+      run: msys2do pacman -Syu --noconfirm
     - name: install monero dependencies
       run: msys2do pacman -S --noconfirm mingw-w64-x86_64-toolchain make mingw-w64-x86_64-cmake mingw-w64-x86_64-boost mingw-w64-x86_64-openssl mingw-w64-x86_64-zeromq mingw-w64-x86_64-libsodium mingw-w64-x86_64-hidapi mingw-w64-x86_64-protobuf-c mingw-w64-x86_64-libusb git
     - name: build
