Remove pool names + contract work
Probably would be best.

--- a/src/eth_adapter/CMakeLists.txt
+++ b/src/eth_adapter/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2014-2019, The Monero Project
+# Copyright (c) 2020 Harrison Hesslink (Equilibria.Network)
 #
 # All rights reserved.
 #
@@ -26,38 +26,22 @@
 # STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
 # THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-set(cryptonote_core_sources
-  blockchain.cpp
-  cryptonote_core.cpp
-  service_node_rules.cpp
-  service_node_list.cpp
-  service_node_deregister.cpp
-  quorum_cop.cpp
-  tx_pool.cpp
-  tx_sanity_check.cpp
-  cryptonote_tx_utils.cpp)
+set(eth_adapter_sources
+  eth_adapter.cpp)
 
-set(cryptonote_core_headers)
+set(eth_adapter_headers)
 
-set(cryptonote_core_private_headers
-  blockchain_storage_boost_serialization.h
-  blockchain.h
-  cryptonote_core.h
-  service_node_rules.h
-  service_node_list.h
-  service_node_deregister.h
-  quorum_cop.h
-  tx_pool.h
-  tx_sanity_check.h
-  cryptonote_tx_utils.h)
+set(eth_adapter_private_headers
+  eth_command_defs.h
+  eth_adapter.h)
 
-monero_private_headers(cryptonote_core
-  ${cryptonote_core_private_headers})
-monero_add_library(cryptonote_core
-  ${cryptonote_core_sources}
-  ${cryptonote_core_headers}
-  ${cryptonote_core_private_headers})
-target_link_libraries(cryptonote_core
+monero_private_headers(eth_adapter
+  ${eth_adapter_private_headers})
+monero_add_library(eth_adapter
+  ${eth_adapter_sources}
+  ${eth_adapter_headers}
+  ${eth_adapter_private_headers})
+target_link_libraries(eth_adapter
   PUBLIC
     version
     common
@@ -66,9 +50,6 @@ target_link_libraries(cryptonote_core
     multisig
     ringct
     device
-    hardforks
-    eth_adapter
-    pythia_adapter
     ${Boost_DATE_TIME_LIBRARY}
     ${Boost_PROGRAM_OPTIONS_LIBRARY}
     ${Boost_SERIALIZATION_LIBRARY}
